// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomerDetailPage > LTR snapshot 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      customerDetailBack
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      Herat Depot
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        customerInfoHeading
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="grid gap-4 md:grid-cols-2"
        >
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-name"
            >
              fieldName
               *
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-name"
              value="Herat Depot"
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-contact"
            >
              fieldContactName
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-contact"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-phone"
            >
              fieldPhone
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-phone"
              type="tel"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-email"
            >
              fieldEmail
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-email"
              type="email"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5 md:col-span-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-address"
            >
              fieldAddress
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-address"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-terms"
            >
              fieldPaymentTerms
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-terms"
              min="0"
              placeholder="30"
              type="number"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-credit"
            >
              fieldCreditLimit
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-credit"
              min="0"
              placeholder="0"
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          class="flex"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-fit"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            saveCustomer
          </button>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        contractPricesHeading
      </h2>
      <div
        class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50 mb-4"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                contractPriceColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                contractPriceColPrice
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                columnActions
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
              >
                AFN 50.00
              </td>
              <td
                class="px-4 py-3 text-end"
              >
                <button
                  aria-label="removeContractPrice"
                  class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 text-destructive hover:text-destructive hover:bg-destructive/10"
                  data-size="sm"
                  data-slot="button"
                  data-variant="ghost"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="bg-muted/30"
            >
              <td
                class="px-4 pb-3 pt-2"
                colspan="3"
              >
                <p
                  class="text-xs font-medium text-muted-foreground mb-2"
                >
                  volumeBreaks
                </p>
                <div
                  class="flex flex-wrap items-center gap-2"
                >
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-24 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-qty-cp1"
                    min="1"
                    placeholder="minQuantity"
                    step="1"
                    type="number"
                    value=""
                  />
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-28 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-price-cp1"
                    min="0"
                    placeholder="breakPrice"
                    step="any"
                    type="number"
                    value=""
                  />
                  <button
                    class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 px-3 [@media(pointer:coarse)]:min-h-11 h-8 gap-1 text-xs text-primary hover:text-primary hover:bg-primary/10"
                    data-size="sm"
                    data-slot="button"
                    data-testid="tier-add-cp1"
                    data-variant="ghost"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus"
                      fill="none"
                      height="12"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    addVolumeBreak
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="text-sm font-medium text-foreground"
        >
          addContractPrice
        </p>
        <div
          class="flex flex-wrap items-start gap-3"
        >
          <div
            class="relative flex-1 min-w-[180px]"
          >
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              placeholder="searchCatalogForPrice"
              type="search"
              value=""
            />
          </div>
          <input
            class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-36"
            data-slot="input"
            min="0"
            placeholder="contractPricePlaceholder"
            step="any"
            type="number"
            value=""
          />
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
          >
            addContractPrice
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomerDetailPage > LTR snapshot with tiers 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      customerDetailBack
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      Herat Depot
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        customerInfoHeading
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="grid gap-4 md:grid-cols-2"
        >
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-name"
            >
              fieldName
               *
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-name"
              value="Herat Depot"
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-contact"
            >
              fieldContactName
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-contact"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-phone"
            >
              fieldPhone
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-phone"
              type="tel"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-email"
            >
              fieldEmail
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-email"
              type="email"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5 md:col-span-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-address"
            >
              fieldAddress
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-address"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-terms"
            >
              fieldPaymentTerms
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-terms"
              min="0"
              placeholder="30"
              type="number"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-credit"
            >
              fieldCreditLimit
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-credit"
              min="0"
              placeholder="0"
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          class="flex"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-fit"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            saveCustomer
          </button>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        contractPricesHeading
      </h2>
      <div
        class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50 mb-4"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                contractPriceColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                contractPriceColPrice
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                columnActions
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
              >
                AFN 50.00
              </td>
              <td
                class="px-4 py-3 text-end"
              >
                <button
                  aria-label="removeContractPrice"
                  class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 text-destructive hover:text-destructive hover:bg-destructive/10"
                  data-size="sm"
                  data-slot="button"
                  data-variant="ghost"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="bg-muted/30"
            >
              <td
                class="px-4 pb-3 pt-2"
                colspan="3"
              >
                <p
                  class="text-xs font-medium text-muted-foreground mb-2"
                >
                  volumeBreaks
                </p>
                <div
                  class="flex flex-col gap-1 mb-2"
                >
                  <div
                    class="flex items-center gap-3 text-xs"
                  >
                    <span
                      class="text-foreground tabular-nums"
                    >
                      10
                    </span>
                    <span
                      class="text-muted-foreground"
                    >
                      ·
                    </span>
                    <span
                      class="text-foreground tabular-nums"
                    >
                      AFN 15.00
                    </span>
                    <button
                      aria-label="removeBreak"
                      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 gap-1 [@media(pointer:coarse)]:min-h-11 ms-auto h-6 px-1 text-destructive hover:text-destructive hover:bg-destructive/10"
                      data-size="sm"
                      data-slot="button"
                      data-variant="ghost"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="12"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="flex flex-wrap items-center gap-2"
                >
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-24 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-qty-cp1"
                    min="1"
                    placeholder="minQuantity"
                    step="1"
                    type="number"
                    value=""
                  />
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-28 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-price-cp1"
                    min="0"
                    placeholder="breakPrice"
                    step="any"
                    type="number"
                    value=""
                  />
                  <button
                    class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 px-3 [@media(pointer:coarse)]:min-h-11 h-8 gap-1 text-xs text-primary hover:text-primary hover:bg-primary/10"
                    data-size="sm"
                    data-slot="button"
                    data-testid="tier-add-cp1"
                    data-variant="ghost"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus"
                      fill="none"
                      height="12"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    addVolumeBreak
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="text-sm font-medium text-foreground"
        >
          addContractPrice
        </p>
        <div
          class="flex flex-wrap items-start gap-3"
        >
          <div
            class="relative flex-1 min-w-[180px]"
          >
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              placeholder="searchCatalogForPrice"
              type="search"
              value=""
            />
          </div>
          <input
            class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-36"
            data-slot="input"
            min="0"
            placeholder="contractPricePlaceholder"
            step="any"
            type="number"
            value=""
          />
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
          >
            addContractPrice
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomerDetailPage > RTL snapshot 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      customerDetailBack
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      Herat Depot
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        customerInfoHeading
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="grid gap-4 md:grid-cols-2"
        >
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-name"
            >
              fieldName
               *
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-name"
              value="Herat Depot"
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-contact"
            >
              fieldContactName
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-contact"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-phone"
            >
              fieldPhone
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-phone"
              type="tel"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-email"
            >
              fieldEmail
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-email"
              type="email"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5 md:col-span-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-address"
            >
              fieldAddress
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-address"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-terms"
            >
              fieldPaymentTerms
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-terms"
              min="0"
              placeholder="30"
              type="number"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-credit"
            >
              fieldCreditLimit
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-credit"
              min="0"
              placeholder="0"
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          class="flex"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-fit"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            saveCustomer
          </button>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        contractPricesHeading
      </h2>
      <div
        class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50 mb-4"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                contractPriceColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                contractPriceColPrice
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                columnActions
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
              >
                AFN 50.00
              </td>
              <td
                class="px-4 py-3 text-end"
              >
                <button
                  aria-label="removeContractPrice"
                  class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 text-destructive hover:text-destructive hover:bg-destructive/10"
                  data-size="sm"
                  data-slot="button"
                  data-variant="ghost"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="bg-muted/30"
            >
              <td
                class="px-4 pb-3 pt-2"
                colspan="3"
              >
                <p
                  class="text-xs font-medium text-muted-foreground mb-2"
                >
                  volumeBreaks
                </p>
                <div
                  class="flex flex-wrap items-center gap-2"
                >
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-24 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-qty-cp1"
                    min="1"
                    placeholder="minQuantity"
                    step="1"
                    type="number"
                    value=""
                  />
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-28 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-price-cp1"
                    min="0"
                    placeholder="breakPrice"
                    step="any"
                    type="number"
                    value=""
                  />
                  <button
                    class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 px-3 [@media(pointer:coarse)]:min-h-11 h-8 gap-1 text-xs text-primary hover:text-primary hover:bg-primary/10"
                    data-size="sm"
                    data-slot="button"
                    data-testid="tier-add-cp1"
                    data-variant="ghost"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus"
                      fill="none"
                      height="12"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    addVolumeBreak
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="text-sm font-medium text-foreground"
        >
          addContractPrice
        </p>
        <div
          class="flex flex-wrap items-start gap-3"
        >
          <div
            class="relative flex-1 min-w-[180px]"
          >
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              placeholder="searchCatalogForPrice"
              type="search"
              value=""
            />
          </div>
          <input
            class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-36"
            data-slot="input"
            min="0"
            placeholder="contractPricePlaceholder"
            step="any"
            type="number"
            value=""
          />
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
          >
            addContractPrice
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomerDetailPage > RTL snapshot with tiers 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground h-8 gap-1 [@media(pointer:coarse)]:min-h-11 w-fit px-0"
      data-size="sm"
      data-slot="button"
      data-testid="back-button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left me-1"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      customerDetailBack
    </button>
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      Herat Depot
    </h1>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        customerInfoHeading
      </h2>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="grid gap-4 md:grid-cols-2"
        >
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-name"
            >
              fieldName
               *
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-name"
              value="Herat Depot"
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-contact"
            >
              fieldContactName
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-contact"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-phone"
            >
              fieldPhone
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-phone"
              type="tel"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-email"
            >
              fieldEmail
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-email"
              type="email"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5 md:col-span-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-address"
            >
              fieldAddress
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-address"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-terms"
            >
              fieldPaymentTerms
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-terms"
              min="0"
              placeholder="30"
              type="number"
              value=""
            />
          </div>
          <div
            class="flex flex-col gap-1.5"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
              data-slot="label"
              for="detail-credit"
            >
              fieldCreditLimit
            </label>
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              id="detail-credit"
              min="0"
              placeholder="0"
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          class="flex"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-fit"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            saveCustomer
          </button>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl bg-card p-5 shadow-card ring-[0.65px] ring-border/50"
    >
      <h2
        class="text-base font-semibold text-foreground mb-4"
      >
        contractPricesHeading
      </h2>
      <div
        class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50 mb-4"
      >
        <table
          class="w-full text-sm"
        >
          <thead
            class="bg-muted"
          >
            <tr>
              <th
                class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                contractPriceColItem
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide tabular-nums"
              >
                contractPriceColPrice
              </th>
              <th
                class="px-4 py-3 text-end font-medium text-muted-foreground text-xs uppercase tracking-wide"
              >
                columnActions
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-border"
          >
            <tr
              class="hover:bg-muted/50"
            >
              <td
                class="px-4 py-3 text-foreground"
              >
                Amoxicillin 500mg
              </td>
              <td
                class="px-4 py-3 text-end tabular-nums text-muted-foreground"
              >
                AFN 50.00
              </td>
              <td
                class="px-4 py-3 text-end"
              >
                <button
                  aria-label="removeContractPrice"
                  class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-8 gap-1 px-3 [@media(pointer:coarse)]:min-h-11 text-destructive hover:text-destructive hover:bg-destructive/10"
                  data-size="sm"
                  data-slot="button"
                  data-variant="ghost"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="bg-muted/30"
            >
              <td
                class="px-4 pb-3 pt-2"
                colspan="3"
              >
                <p
                  class="text-xs font-medium text-muted-foreground mb-2"
                >
                  volumeBreaks
                </p>
                <div
                  class="flex flex-col gap-1 mb-2"
                >
                  <div
                    class="flex items-center gap-3 text-xs"
                  >
                    <span
                      class="text-foreground tabular-nums"
                    >
                      10
                    </span>
                    <span
                      class="text-muted-foreground"
                    >
                      ·
                    </span>
                    <span
                      class="text-foreground tabular-nums"
                    >
                      AFN 15.00
                    </span>
                    <button
                      aria-label="removeBreak"
                      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 gap-1 [@media(pointer:coarse)]:min-h-11 ms-auto h-6 px-1 text-destructive hover:text-destructive hover:bg-destructive/10"
                      data-size="sm"
                      data-slot="button"
                      data-variant="ghost"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="12"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="flex flex-wrap items-center gap-2"
                >
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-24 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-qty-cp1"
                    min="1"
                    placeholder="minQuantity"
                    step="1"
                    type="number"
                    value=""
                  />
                  <input
                    class="flex rounded-xl border border-border bg-background px-4 py-2 ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-28 h-8 text-xs"
                    data-slot="input"
                    data-testid="tier-price-cp1"
                    min="0"
                    placeholder="breakPrice"
                    step="any"
                    type="number"
                    value=""
                  />
                  <button
                    class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 px-3 [@media(pointer:coarse)]:min-h-11 h-8 gap-1 text-xs text-primary hover:text-primary hover:bg-primary/10"
                    data-size="sm"
                    data-slot="button"
                    data-testid="tier-add-cp1"
                    data-variant="ghost"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus"
                      fill="none"
                      height="12"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    addVolumeBreak
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="text-sm font-medium text-foreground"
        >
          addContractPrice
        </p>
        <div
          class="flex flex-wrap items-start gap-3"
        >
          <div
            class="relative flex-1 min-w-[180px]"
          >
            <input
              class="flex h-10 w-full rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50"
              data-slot="input"
              placeholder="searchCatalogForPrice"
              type="search"
              value=""
            />
          </div>
          <input
            class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-36"
            data-slot="input"
            min="0"
            placeholder="contractPricePlaceholder"
            step="any"
            type="number"
            value=""
          />
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-variant="default"
            disabled=""
          >
            addContractPrice
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
